[project]
requires-python = "==3.13.*"
name = "qdbc"
version = "0.1.0"
description = "QuestDB Database Connectivity"
dependencies = [
    "typer>=0.15.3,<0.16",
    "click>=8.1.0,<8.2.0",
    "questdb>=2.0.4",
    "polars>=1.29.0",
    "pyarrow>=20.0.0",
    "connectorx",
    "pandas>=2.2.3",
    "asyncpg>=0.30.0",
    "psycopg>=3.2.8",
    "requests>=2.32.3,<3",
    "numba>=0.61.2",

]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
]

